<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tommyputranto.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_margin_horizontal"
        android:layout_marginRight="@dimen/activity_margin_horizontal"
        android:layout_marginTop="@dimen/activity_margin_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/textview_my_nanodegree_apps"
            android:textColor="@color/colorButton"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/button_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="popularMovie"
            android:text="@string/textview_popular_movies"/>

        <Button
            android:id="@+id/button_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="stockHawk"
            android:text="@string/textview_stock_hawk"/>

        <Button
            android:id="@+id/button_build"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buildItBigger"
            android:text="@string/textview_build_it_bigger"/>

        <Button
            android:id="@+id/button_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="makeYourAppMaterial"
            android:text="@string/textview_make_your_app_material"/>

        <Button
            android:id="@+id/button_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goUbiquitous"
            android:text="@string/text_go_ubiquitous"/>

        <Button
            android:id="@+id/button_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="capstone"
            android:text="@string/text_capstone"/>

    </LinearLayout>

</RelativeLayout>
